--- a/vite-boolflix/src/assets/partials/_common.scss
+++ b/vite-boolflix/src/assets/partials/_common.scss
@@ -1,20 +1,24 @@
 @use './variables' as *;
 
-.header {
+header {
     display: flex;
     justify-content: space-between; 
     align-items: center;
 }
 
 body {
-    background-color: rgb(36, 34, 34);
-    font-family: 'Roboto', sans-serif;
-    color: rgb(198, 198, 198);
+background-image: url('https://dnm.nflximg.net/api/v6/BvVbc2Wxr2w6QuoANoSpJKEIWjQ/AAAAQdHbjrX0uL1mH7uUW7VZ-p5GJOSNNRko_9A_12Mlv5wVYQIDy4nuupxLHxkDj9V0e1OLBs_s8ZlxFkyhPlK5XkrlTK0c7yP42LLinQdYhz8lqfgUcOH68JAbEcY45jG02gCI1NyKVf1lqxsQFmcNN5szbv8.jpg?r=aee');
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+
+font-family: 'Montserrat', sans-serif;
+color: rgb(198, 198, 198);
 }
 
 .big {
-  font-size: 50px;
-  font-weight: bold;
-  color: white;
+  font-size: 40px;
+  font-weight: normal;
+  color: rgba(255, 255, 255, 0.741);
 }
 
