--- a/vite-boolflix/src/assets/partials/_common.scss
+++ b/vite-boolflix/src/assets/partials/_common.scss
@@ -7,18 +7,30 @@ header {
 }
 
 body {
-background-image: url('https://dnm.nflximg.net/api/v6/BvVbc2Wxr2w6QuoANoSpJKEIWjQ/AAAAQdHbjrX0uL1mH7uUW7VZ-p5GJOSNNRko_9A_12Mlv5wVYQIDy4nuupxLHxkDj9V0e1OLBs_s8ZlxFkyhPlK5XkrlTK0c7yP42LLinQdYhz8lqfgUcOH68JAbEcY45jG02gCI1NyKVf1lqxsQFmcNN5szbv8.jpg?r=aee');
+background-image: url('https://preview.redd.it/ub179ctfsnkz.png?auto=webp&s=6b405da1045872f074a2f4ef3df68880b86a674e');
 background-size: cover;
 background-position: center;
 background-attachment: fixed;
-
+transition: background-image 2s ease-in-out;
 font-family: 'Montserrat', sans-serif;
 color: rgb(198, 198, 198);
 }
 
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: -1;
+  }
+
 .big {
-  font-size: 40px;
-  font-weight: normal;
+  font-size: 60px;
+  font-weight: lighter;
   color: rgba(255, 255, 255, 0.741);
+  margin-top: 20px;
 }
 
