--- a/vite-boolflix/src/assets/partials/_common.scss
+++ b/vite-boolflix/src/assets/partials/_common.scss
@@ -23,14 +23,18 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5) 30%, rgba(0, 0, 0, 0) 100%);
     z-index: -1;
+    pointer-events: none;
   }
 
 .big {
-  font-size: 60px;
-  font-weight: lighter;
-  color: rgba(255, 255, 255, 0.741);
+  font-size: 35px;
+  font-weight: bolder;
+  color: rgb(255, 255, 255);
   margin-top: 20px;
+  margin-left: 18px;
+text-shadow: 20px;
 }
+
 
